# Renewable-Energy-Market

./: .dockerignore  .env  .flake8  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  tasks.py
docker/: Dockerfile  README.md  database-init.Dockerfile  docker-compose.yml
docker/scripts/: init_db.sh  manage_docker.sh  run.sh
docs/: licenses.txt
e2e_tests/: test_pm_184.py
hooks/: autohook.sh
hooks/pre-commit/: 01-run-linters.sh
poetry_scripts/: __init__.py  audit.py
src/: conftest.py
src/der_gateway_relay/: config.py  consumer.py  main.py  readme.md  topics.py
src/der_gateway_relay/builders/: program.py  program_constraints.py  program_control_types.py  provision_program.py
src/der_gateway_relay/domain/: payloads.py
src/der_gateway_relay/services/: api_service.py
src/der_gateway_relay/tests/: conftest.py  test_consumer.py
src/der_gateway_relay/tests/builder/: mixins.py  test_control_types.py  test_program_constraints.py  test_provision_program.py  test_xml_builder.py
src/der_gateway_relay/tests/domain/: payloads.py
src/der_gateway_relay/tests/services/: test_api_service.py
src/pm/: bucket_watcher.py  config.py  scheduler.py  topics.py  worker.py
src/pm/consumers/contract/: handlers.py
src/pm/consumers/der_gateway/: handlers.py  validators.py
src/pm/consumers/der_warehouse/: handlers.py
src/pm/consumers/event/: handle_enrollment_create_message.py  handle_service_provider_der_association_message.py  handlers.py
src/pm/data_transfer_objects/: csv_upload_kafka_messages.py
src/pm/docs/: asyncapi-spec.json  generate_docs.py
src/pm/migrations/: V10__add index_to_der_dispatch_and_response.sql  V11__remove_constraint_contract_table.sql  V1__Base_migrations.sql  V2__create_outbox_table.sql  V3__rename_der_info_table.sql  V4__update_constraint_summary_table.sql  V5__Create_report_tables.sql  V6__update_program_control_type.sql  V7__alter_report_table.sql  V8__modify_contract_report_details.sql  V9__update_nameplate_rating_type.sql
src/pm/modules/derinfo/: controller.py  enums.py  repository.py
src/pm/modules/enrollment/: contract_controller.py  contract_repository.py  controller.py  enums.py  repository.py
src/pm/modules/event_tracking/: constraints.py  controller.py  repository.py
src/pm/modules/outbox/: controller.py  model.py  repository.py
src/pm/modules/progmgmt/: controller.py  enums.py  repository.py
src/pm/modules/reports/: controller.py  enums.py  repository.py
src/pm/modules/serviceprovider/: controller.py  enums.py  repository.py
src/pm/restapi/: exceptions.py  utils.py  validators.py  web.py
src/pm/restapi/routes/: system.py
src/pm/seed/: database.py  kafka.py
src/pm/tests/: conftest.py  factories.py
src/pm/tests/consumer/: mocks.py
src/pm/tests/tasks_test/: der_sample.csv  task_tests.py  test_minio.py
src/pm/tests_acceptance/: conftest.py  mixins.py
src/pm/tests_acceptance/contract/: test_PM_438_cancel_contracts_when_der_removed.py  test_PM_688_contract_modification.py  test_contract_program_serviceProviderDerAssoc.py  test_get_contracts.py
src/pm/tests_acceptance/der_info/: test_PM_321_pull_list_of_ders.py
src/pm/tests_acceptance/enrollment/: mixins.py  test_PM-828-Eligibility-epic.py  test_PM_286_DER_eligibility_check.py  test_PM_297_report_and_data.py  test_PM_322_enroll_ders.py  test_PM_699_upload_enrollment_file.py  test_PM_887_download_enrollment_template.py  (+1 more)
src/shared/: enums.py  exceptions.py  minio_manager.py  model.py  repository.py  smorest.py  utils.py
src/shared/adapters/: als.py
src/shared/system/: configuration.py  database.py  loggingsys.py
src/shared/tasks/: consumer.py  decorators.py  producer.py
src/shared/tools/: asyncapi.py  log_time.py  retry_on_exception.py  utils.py
src/shared/validators/: der_gateway_data.py
(+124 files in other folders)
